force-app/main/default/src/objects/PJN_Coverage_Investigation_Item__c/PJN_Coverage_Investigation_Item__c.object-meta.xml
<CustomObject>
    <description>Patient Journey Navigator custom object which stores the join between a Coverage Investigation and the items involved such as Member Plans.</description>
    <label>Coverage Investigation Item</label>
    <nameField>
        <displayFormat>CII-{000000}</displayFormat>
        <label>Coverage Investigation Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Investigation Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>