force-app/main/default/src/objects/PJN_Coverage_Investigation_Item__c/fields/PJN_Assistance_Program__c.field-meta.xml
<CustomField>
    <fullName>PJN_Assistance_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The patient&apos;s Assistance Programs being assessed in the Coverage Investigation.</description>
    <label>Assistance Program</label>
    <referenceTo>PJN_Assistance_Program__c</referenceTo>
    <relationshipLabel>Coverage Investigation Items</relationshipLabel>
    <relationshipName>Coverage_Investigation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>