force-app/main/default/src/objects/PJN_Coverage_Investigation_Item__c/fields/PJN_Coverage_Investigation__c.field-meta.xml
<CustomField>
    <fullName>PJN_Coverage_Investigation__c</fullName>
    <description>The parent Coverage Investigation which the items are related to.</description>
    <label>Coverage Investigation</label>
    <referenceTo>PJN_Coverage_Investigation__c</referenceTo>
    <relationshipLabel>Coverage Investigation Items</relationshipLabel>
    <relationshipName>Coverage_Investigation_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>