force-app/main/default/src/objects/PJN_Coverage_Investigation_Item__c/fields/PJN_Coverage_Investigation_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Coverage_Investigation_Status__c</fullName>
    <description>Pulls the status of the Coverage Investigation through to the Item. Used for filtering in some process automation and also to display in Member Plan related lists.</description>
    <formula>TEXT( PJN_Coverage_Investigation__r.PJN_Status__c )</formula>
    <label>Coverage Investigation Status</label>
    <type>Text</type>
</CustomField>