force-app/main/default/src/objects/PJN_Coverage_Investigation_Item__c/fields/PJN_Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Insurance_Type__c</fullName>
    <description>Displays the Coverage Order and Coverage Type from the Member Plan.</description>
    <formula>TEXT( PJN_Member_Plan__r.PJN_Coverage_Order__c )
&amp;
IF( ISPICKVAL ( PJN_Member_Plan__r.PJN_Coverage_Type__c, &apos;&apos; ),
    &apos;&apos;,
    &apos; - &apos; &amp; TEXT( PJN_Member_Plan__r.PJN_Coverage_Type__c )
)</formula>
    <label>Insurance Type</label>
    <type>Text</type>
</CustomField>