force-app/main/default/src/objects/PJN_Coverage_Investigation_Item__c/fields/PJN_Member_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Member_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The patient&apos;s Member Plan being assessed in the Coverage Investigation.</description>
    <label>Member Plan</label>
    <referenceTo>PJN_Member_Plan__c</referenceTo>
    <relationshipLabel>Coverage Investigation Items</relationshipLabel>
    <relationshipName>Coverage_Investigation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>