force-app/main/default/src/objects/PJN_Coverage_Investigation_Item__c/fields/PJN_Payer_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Payer_Plan__c</fullName>
    <formula>PJN_Member_Plan__r.PJN_Payer_Name__c
&amp;
IF( ISBLANK( PJN_Member_Plan__r.MVN_Payer_Plan_Name__c ),
&apos;&apos;,
&apos; - &apos; &amp; PJN_Member_Plan__r.MVN_Payer_Plan_Name__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payer / Plan</label>
    <type>Text</type>
</CustomField>