force-app/main/default/src/objects/PJN_Coverage_Investigation_Item__c/fields/PJN_Prior_Authorization__c.field-meta.xml
<CustomField>
    <fullName>PJN_Prior_Authorization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The patient&apos;s Member Plan being assessed in the Coverage Investigation.</description>
    <label>Prior Authorization</label>
    <referenceTo>PJN_Prior_Authorization__c</referenceTo>
    <relationshipLabel>Coverage Investigation Items</relationshipLabel>
    <relationshipName>Coverage_Investigation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>