force-app/main/default/src/objects/PJN_Coverage_Investigation_Item__c/fields/PJN_Therapy_Covered__c.field-meta.xml
<CustomField>
    <fullName>PJN_Therapy_Covered__c</fullName>
    <description>Displays the Therapy Covered value from the Member Plan.</description>
    <formula>IF( ISPICKVAL( PJN_Member_Plan__r.PJN_Therapy_Covered__c, &apos;&apos; ), 
    &quot;Pending&quot;,
    TEXT(PJN_Member_Plan__r.PJN_Therapy_Covered__c)
)</formula>
    <label>Therapy Covered?</label>
    <type>Text</type>
</CustomField>