force-app/main/default/src/objects/PJN_Coverage_Investigation_Item__c/recordTypes/PJN_Member_Plan.recordType-meta.xml
<RecordType>
    <fullName>PJN_Member_Plan</fullName>
    <active>true</active>
    <description>A Member Plan benefit investigation item.</description>
    <label>Member Plan</label>
</RecordType>